# sims_4_modding

./: .env.example  .gitignore  .pylintrc  AGENTS.md  PROTOCOL.md  README.md  build.py  build.sh  decompile_ea.sh  npc-ai-mod.code-workspace  pyproject.toml  pyrightconfig.json  setup.cfg
ai_service/: .env.example  README.md  main.py  pyproject.toml
ai_service/ai_service/: __init__.py  __main__.py  deps.py  game_types.py  models.py  router_v1.py  tick_latest_store.py
ai_service/ai_service/core/: __init__.py  constants.py  settings.py
ai_service/ai_service/lib/: __init__.py
ai_service/ai_service/modules/tick/models/: __init__.py
ai_service/ai_service/modules/tick/router/: __init__.py
ai_service/ai_service/modules/tick/router/v1/: __init__.py  handlers.py
ai_service/ai_service/modules/tick/schemas/: __init__.py
ai_service/ai_service/modules/tick/services/: store.py
ai_service/ai_service/modules/viewer/router/: __init__.py
ai_service/ai_service/modules/viewer/router/v1/: __init__.py
ai_service/ai_service/modules/viewer/services/: hub.py
ai_service/ai_service/static/: viewer.css  viewer.html  viewer.js
ai_service/ai_service/static/viewer/: base.css  card-ui.js  grid-toolbar.css  header.css  history-dialog.css  history-dialog.js  main.js  mod-log.css  mod-logs.js  prefs.js  sim-card.css  sim-model.js  summon-track.js  toast.css  toast.js  tokens.css
npc_ai_mod/: .env.example  .gitignore  README.md  __init__.py  bridge.py  director.py  hooks.py  logutil.py  pyproject.toml  sim_state.py  tick_throttle.py  utils.py
npc_ai_mod/docs/: architecture.md
npc_ai_mod/npc_ai_mod/: actions.py  bridge.py  director.py  director_support.py  logutil.py  runtime.py  schemas.py  sim_state.py  utils.py
npc_ai_mod/npc_ai_mod/actions/: __init__.py  dispatch.py  registry.py  sim_lookup.py
npc_ai_mod/npc_ai_mod/actions/handlers/: __init__.py  go_home.py  summon_sim.py
npc_ai_mod/npc_ai_mod/bridge/: __init__.py  client.py  constants.py  ws_tick.py
npc_ai_mod/npc_ai_mod/config/: __init__.py
npc_ai_mod/npc_ai_mod/config/profiles/: __init__.py  development.py  production.py
npc_ai_mod/npc_ai_mod/hooks/: __init__.py  zone_hooks.py
npc_ai_mod/npc_ai_mod/schemas/: __init__.py  models.py  wire.py
npc_ai_mod/npc_ai_mod/sim_state/: __init__.py  _filters.py  _iteration.py  filters.py  fingerprints.py  instanced.py  iteration.py  partner_wire.py  partners.py  serialized_interactions.py  snapshot.py  types_defs.py  verbose_si.py
npc_ai_mod/scripts/: build.py
npc_ai_mod/src/npc_ai_mod/: __init__.py  director.py  hooks.py  sim_state.py
stubs/: alarms.pyi  clock.pyi  date_and_time.pyi  services.pyi  zone.pyi
stubs/distributor/: __init__.pyi  ops.pyi  system.pyi
stubs/event_testing/: results.pyi
stubs/interactions/: context.pyi  interaction_queue.pyi  priority.pyi  si_state.pyi
stubs/interactions/base/: interaction.pyi  super_interaction.pyi
stubs/sims/: sim.pyi  sim_info.pyi  sim_info_manager.pyi  sim_info_types.pyi
stubs/statistics/: commodity_tracker.pyi
stubs/venues/: venue_constants.pyi  venue_service.pyi
