[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npc-ai-bridge"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

# Sources live at project root but import as package `ai_service` (see main.py).
[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "ai_service/__init__.py"
"main.py" = "ai_service/main.py"
"router_v1.py" = "ai_service/router_v1.py"
"models.py" = "ai_service/models.py"
"game_types.py" = "ai_service/game_types.py"