[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_service"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]


[tool.pyright]
extraPaths = ["../EA/core", "../EA/simulation"]

[tool.hatch.build.targets.wheel]
artifacts = ["ai_service/static/viewer.html"]